Updatem2 index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script> location.href="https://linkbanhcafe-20252025.onrender.com"</script>
+<script> location.href="https://linkbanhcafe2025.onrender.com/"</script>
